clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/var_borrow_field/var_borrow_field.cbs
// RUN: %clang_cc1 -verify %s

typedef struct S {
    int a;
    int b;
} S;

void use_mutI(int * borrow);
void use_constI(const int * borrow);
void use_mutS(S * borrow);
void use_constS(const S * borrow);
T* owned safe_malloc<T>(T value);
void free_owned<T>(T* owned p);
void free(void*);

void test1() {
    S local = {.a = 1, .b = 2};
    int * borrow p = &mut local.a;
    S * borrow s = &mut local; // expected-note {{previous borrow is here}}
    use_mutI(p); // expected-error {{There should be at most one mutable borrow targeting to 'local' at the same time}}
    use_mutS(s);
}

void test2() {
    S local = {.a = 1, .b = 2};
    const int * borrow p = &const local.a;
    S * borrow s = &mut local; // expected-note {{previous borrow is here}}
    use_constI(p); // expected-error {{There should be at most one mutable borrow targeting to 'local' at the same time}}
    use_mutS(s);
}

void test3() {
    S local = {.a = 1, .b = 2};
    int * borrow p = &mut local.a;
    const S * borrow s = &const local; // expected-note {{previous borrow is here}}
    use_mutI(p); // expected-error {{There should be at most one mutable borrow targeting to 'local' at the same time}}
    use_constS(s);
}